[tool.poetry]
name = "btc-discover"
version = "0.1.0"
description = ""
authors = ["Henrique Sebastião <contato@henriquesebastiao.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptos = "^2.0.9"
numpy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
